--- a/sending/src/main/AndroidManifest.xml
+++ b/sending/src/main/AndroidManifest.xml
@@ -1,2 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.kin.sending" />
+    package="org.kin.sending" >
+    <application>
+        <activity
+            android:name=".view.SendKinActivity"
+            android:screenOrientation="portrait" />
+    </application>
+</manifest>
