--- a/core/build.gradle
+++ b/core/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.github.kinecosystem.kin-sdk-android:kin-sdk-lib:1.0.6'
+    implementation 'com.github.kinecosystem:kin-sdk-android:1.0.6'
+
 
     implementation 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
