--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "29.0.1"
+    compileSdkVersion 28
+    buildToolsVersion "29.0.2"
 
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
 
@@ -27,21 +27,20 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.github.kinecosystem.kin-sdk-android:kin-sdk-lib:1.0.6'
     implementation 'com.github.kinecosystem:kin-sdk-android:1.0.6'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
-
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    androidTestImplementation 'org.mockito:mockito-core:2.10.0'
-    testImplementation 'org.jetbrains.kotlin:kotlin-stdlib:1.2.71'
+    androidTestImplementation 'org.mockito:mockito-core:2.27.0'
+    testImplementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.41'
     testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0-RC1'
     testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:2.13.0'
-    testImplementation 'org.robolectric:robolectric:3.6.1'
+    testImplementation 'org.mockito:mockito-core:2.27.0'
+    testImplementation 'org.robolectric:robolectric:4.3'
 
 
 }
