--- a/sending/src/main/AndroidManifest.xml
+++ b/sending/src/main/AndroidManifest.xml
@@ -4,6 +4,6 @@
         <activity
             android:name=".view.SendKinActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+            android:theme="@style/SendKineNoActionBar"/>
     </application>
 </manifest>
