--- a/core/build.gradle
+++ b/core/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 
     implementation 'com.github.kinecosystem.kin-sdk-android:kin-sdk-lib:1.0.6'
     implementation 'com.github.kinecosystem:kin-sdk-android:1.0.6'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
 
     implementation 'com.android.support:appcompat-v7:26.1.0'
