--- a/sending/build.gradle
+++ b/sending/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0-RC1'
     testImplementation 'org.mockito:mockito-core:2.13.0'
     testImplementation 'org.robolectric:robolectric:3.6.1'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
 }
