--- a/kin-sendkin-sample/build.gradle
+++ b/kin-sendkin-sample/build.gradle
@@ -20,6 +20,10 @@ android {
             storePassword 'kintest'
         }
     }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
     buildTypes {
         release {
             minifyEnabled true
@@ -34,8 +38,8 @@ dependencies {
 
     implementation 'com.github.kinecosystem.kin-sdk-android:kin-sdk-lib:1.0.6'
 
-
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
